added the second blog and the third blog

--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,24 @@
 
 
     </div>
+    <div>
+        <h3>My second website</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Debitis ea ratione, est labore eum, repellat,
+              sapiente provident ab minus aspernatur enim esse a temporibus recusandae aliquid perferendis iure.
+               Eaque, at.</p>
+
+
+    </div>
+    <div>
+        <h3>My third website</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+             Debitis ea ratione, est labore eum, repellat,
+              sapiente provident ab minus aspernatur enim esse a temporibus recusandae aliquid perferendis iure.
+               Eaque, at.</p>
+
+
+    </div>
     
 </body>
 </html>
