--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,15 @@
 
 
     </div>
+    <div>
+        <h3>How to push incrimental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m'add a meaningful commit message "</li>
+            <li>git push</li>
+        </ul>
+
+    </div>
     
 </body>
 </html>
